--- a/docker_compose01/docker-compose.yml
+++ b/docker_compose01/docker-compose.yml
@@ -2,9 +2,11 @@
 version: '2'
 
 services:
+    app:
+        build: app
 
-  proxy:
-    build: proxy
-    ports:
-    - "80:80"
-    - "443:443"
+    proxy:
+        build: proxy
+        ports:
+         - "80:80"
+         
