--- a/docker_compose01/proxy/proxy.conf
+++ b/docker_compose01/proxy/proxy.conf
@@ -1,7 +1,14 @@
+upstream hello.what {
+    server app;
+    server app1;
+    server app2;
+    #server app;
+}
+
 server {
     listen 80;
-
+    #server_name hello.what;
     location / {
-        proxy_pass http://app;
+        proxy_pass http://hello.what;
     }
 }
