With SSL Pem and CRT files

--- a/docker_compose01/proxy/proxy.conf
+++ b/docker_compose01/proxy/proxy.conf
@@ -1,4 +1,4 @@
-upstream hello.what {
+upstream hello {
     server app;
     server app1;
     server app2;
@@ -6,9 +6,19 @@ upstream hello.what {
 }
 
 server {
-    listen 80;
-    #server_name hello.what;
+    #listen 80;
+    listen 443 ssl;
+    #listen [::]:443 ssl http2;
+    server_name localhost;
+    #ssl_certificate /etc/ssl/certs/localhost.crt;
+    #ssl_certificate_key /etc/ssl/private/localhost.key;
+    #ssl_protocols TLSv1.3 TLSv1.2 TLSv1.1 TLSv1;
+    #ssl_ciphers HIGH:!aNULL:!MD5;
+
+    ssl_certificate /etc/nginx/conf.d/cert.pem;
+    ssl_certificate_key /etc/nginx/conf.d/key.pem;
+
     location / {
-        proxy_pass http://hello.what;
+        proxy_pass http://hello;
     }
 }
